--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"/>
         <EditText
             android:id="@+id/topk"
-            android:text="15"
+            android:text="3"
             android:inputType="number"
             android:gravity="center"
             android:layout_weight="1"
@@ -56,7 +56,8 @@
     </LinearLayout>
     <EditText
         android:id="@+id/edit"
-        android:singleLine="true"
+        android:minLines="2"
+        android:maxLines="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Button
