--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,95 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<androidx.fragment.app.FragmentContainerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    tools:context=".MainActivity">
-    <RadioGroup
-        android:visibility="gone"
-        android:id="@+id/group"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RadioButton
-            android:id="@+id/mode_1"
-            android:text="综合"
-            android:checked="true"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <RadioButton
-            android:id="@+id/mode_2"
-            android:text="玄幻"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-    </RadioGroup>
-    <LinearLayout
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/number"
-            android:text="128"
-            android:gravity="center"
-            android:inputType="number"
-            android:singleLine="true"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <EditText
-            android:id="@+id/topk"
-            android:text="3"
-            android:inputType="number"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:singleLine="true"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <EditText
-        android:id="@+id/edit"
-        android:minLines="2"
-        android:maxLines="2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:id="@+id/create"
-        android:text="复制ASSETS到模型路径"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"/>
-    <LinearLayout
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/start"
-            android:text="生成"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="55dp"/>
-    </LinearLayout>
-    <ScrollView
-        android:fillViewport="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/text"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:textSize="17sp"
-            android:textColor="@color/black"
-            android:lineSpacingExtra="5dp"
-            android:textIsSelectable="true"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </ScrollView>
-</androidx.appcompat.widget.LinearLayoutCompat>
+    tools:context=".MainActivity"/>
